[gd_scene load_steps=7 format=3 uid="uid://7g8wa0gm3470"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_qdy7j"]
[ext_resource type="Theme" uid="uid://cv5ix05irjhgf" path="res://themes/pausemenu theme.tres" id="2_bh85l"]
[ext_resource type="FontFile" uid="uid://bvpytbeeuugk4" path="res://assets/fonts/Vanilla.ttf" id="2_tiir0"]
[ext_resource type="AudioStream" uid="uid://b75i4k2cjlo7i" path="res://assets/SFX/220191__gameaudio__space-swoosh-brighter.wav" id="3_m75yk"]
[ext_resource type="AudioStream" uid="uid://baqe8q6muw8tf" path="res://assets/SFX/171697__nenadsimic__menu-selection-click.wav" id="4_af5pk"]
[ext_resource type="Theme" uid="uid://chj0t5k1pukfn" path="res://themes/mainmenu theme.tres" id="4_h334a"]

[node name="game_over" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdy7j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 0.556863)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.0
offset_top = -77.0
offset_right = 119.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bh85l")
theme_override_fonts/font = ExtResource("2_tiir0")
text = "YOU WERE ATOMIZED"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -9.0
offset_right = 74.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_h334a")
theme_override_fonts/font = ExtResource("2_tiir0")
text = "Retry"
flat = true

[node name="hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_m75yk")

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_af5pk")

[connection signal="mouse_entered" from="VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_retry_button_pressed"]
